After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 751819 - basesink: Shouldn't drop buffer when sync=false
basesink: Shouldn't drop buffer when sync=false
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gstreamer (core)
git master
Other Linux
: Normal normal
: 1.5.90
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-07-02 07:00 UTC by kevin
Modified: 2015-08-16 13:37 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Shouldn't drop buffer when sync=false (881 bytes, patch)
2015-07-02 07:02 UTC, kevin
committed Details | Review

Description kevin 2015-07-02 07:00:37 UTC
base sink will drop buffer even if set sink with sync=false. attached patch to fix it.
Comment 1 kevin 2015-07-02 07:02:12 UTC
Created attachment 306583 [details] [review]
Shouldn't drop buffer when sync=false
Comment 2 Sebastian Dröge (slomo) 2015-07-06 08:39:53 UTC
commit 8e2c72f1257188f33ebf78629b24cbf224184a69
Author: Song Bing <b06498@freescale.com>
Date:   Thu Jul 2 14:32:21 2015 +0800

    basesink: Shouldn't drop buffer when sync=false
    
    Shouldn't drop buffer when sync=false
    
    https://bugzilla.gnome.org/show_bug.cgi?id=751819