basesink: Shouldn't drop buffer when sync=false

Shouldn't drop buffer when sync=false

https://bugzilla.gnome.org/show_bug.cgi?id=751819